--- a/Hotel app/frontend/src/index.css
+++ b/Hotel app/frontend/src/index.css
@@ -1,5 +1,22 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+
+}
+
+* {
+  font-family: "Poppins";
+}
+
+button {
+  background-color: #4681f4;
+  border : 0px solid white;
+}
+
+button:hover {
+  opacity: 80%;
 }
