--- a/Hotel app/frontend/src/components/customer.css
+++ b/Hotel app/frontend/src/components/customer.css
@@ -1,9 +1,11 @@
+
 .bg {
     /* The image used */
-    background-image: url(../images/Foodbg.jpg) ;
-    height: 100%;
-    width: 100%;
-    position: fixed;
+    /* background-image: url(../images/Foodbg.jpg) ; */
+    background: rgba(255,148,25,0.3);
+    /* height: 100%;
+    width: 100%; */
+    /* position: fixed; */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -12,7 +14,7 @@
 }
 
 .cuss {
-    background-color: wheat;
+    background: whitesmoke;
     min-width: 300px;
     max-width: 700px;
     margin: auto;
@@ -23,23 +25,29 @@
 }
 
 .bg2 {
-    background-image: url(../images/menuwall.jpg) ;
+    /* background-image: url(../images/menuwall.jpg) ; */
     height: 100%;
     width: 100%;
-    position: fixed;
-    background-position: center;
+    /* position: fixed; */
+    /* background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; */
+    background: rgba(255,148,25,0.3);
 }
 
 .bg3 {
-    background-image: url(../images/jj.jpg) ;
-    height: 100%;
+    /* background-image: url(../images/jj.jpg) ; */
+    /* height: 100%;
+    width: 100%; */
+    /* position: fixed; */
+    /* background-position: center;
+    background-repeat: no-repeat; */
+    /* background-size: cover; */
+    background: rgba(255,148,25,0.3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    position: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 .border {
@@ -48,10 +56,11 @@
 }
 
 .bghome {
-    background-image: url(../images/home.jpg) ;
+    /* background-image: url(../images/home.jpg) ; */
+    background: rgba(255,148,25,0.3);
     height: 100%;
     width: 100%;
-    position: fixed;
+    /* position: fixed; */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -80,8 +89,8 @@
         width : 300px;
     }
     .qr {
-        width : 300px;
-        height: 500px;
+        width : 100%;
+        height: 100%;
     }
     .box {
         width:80%;
