--- a/Hotel app/frontend/src/components/customer.css
+++ b/Hotel app/frontend/src/components/customer.css
@@ -3,7 +3,7 @@
 .bg {
     /* The image used */
     /* background-image: url(../images/Foodbg.jpg) ; */
-    background: rgba(255,148,25,0.3);
+    /* background: rgba(255,148,25,0.3); */
     /* height: 100%;
     width: 100%; */
     /* position: fixed; */
@@ -45,7 +45,7 @@
     /* background-position: center;
     background-repeat: no-repeat; */
     /* background-size: cover; */
-    background: rgba(255,148,25,0.3);
+    /* background: rgba(255,148,25,0.3); */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -59,7 +59,7 @@
 
 .bghome {
     /* background-image: url(../images/home.jpg) ; */
-    background: rgba(255,148,25,0.3);
+    /* background: rgba(255,148,25,0.3); */
     height: 100%;
     width: 100%;
     /* position: fixed; */
